sklearn/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/simplilearn/simplilearn-AI-masters/sklearn
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=5ba3cd60eef8dddd88185dd103c5f7fef2724ab81e7208d4
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=5ba3cd60eef8dddd88185dd103c5f7fef2724ab81e7208d4
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | INFO] Creating new notebook in 
[NotebookApp | INFO] Kernel started: d8d48584-ec16-4ad9-8bbb-3ac2d02fef5d
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel d8d48584-ec16-4ad9-8bbb-3ac2d02fef5d
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Kernel interrupted: d8d48584-ec16-4ad9-8bbb-3ac2d02fef5d
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Starting buffering for d8d48584-ec16-4ad9-8bbb-3ac2d02fef5d:93f0488fd20b443288ffb9bc95c47653
[NotebookApp | INFO] Kernel shutdown: d8d48584-ec16-4ad9-8bbb-3ac2d02fef5d
[NotebookApp | ERROR] Exception restarting kernel
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/notebook/services/kernels/handlers.py", line 85, in post
        yield gen.maybe_future(km.restart_kernel(kernel_id))
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/notebook/services/kernels/kernelmanager.py", line 285, in restart_kernel
        self._check_kernel_id(kernel_id)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/notebook/services/kernels/kernelmanager.py", line 364, in _check_kernel_id
        raise web.HTTPError(404, u'Kernel does not exist: %s' % kernel_id)
    tornado.web.HTTPError: HTTP 404: Not Found (Kernel does not exist: d8d48584-ec16-4ad9-8bbb-3ac2d02fef5d)
[NotebookApp | ERROR] {
      "Host": "localhost:8888",
      "Connection": "keep-alive",
      "Content-Length": "0",
      "Accept": "application/json, text/javascript, */*; q=0.01",
      "Origin": "http://localhost:8888",
      "X-Requested-With": "XMLHttpRequest",
      "X-Xsrftoken": "2|271565a0|c0b25d387872ae9054ea54cb23cff80c|1544231514",
      "User-Agent": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36",
      "Referer": "http://localhost:8888/notebooks/LinearRegression.ipynb",
      "Accept-Encoding": "gzip, deflate, br",
      "Accept-Language": "en-GB,en-US;q=0.9,en;q=0.8",
      "Cookie": "_xsrf=2|271565a0|c0b25d387872ae9054ea54cb23cff80c|1544231514; connect.sid=s%3AGjZxIfV5WVronkt2OCjMxr5xPkrFY9nH.grGJKgrXoDlphCtRFoN2Usb0%2BUKGKO7MC0q1z7YQDw0; SMCSERVERID3=server:127.0.0.1:5000; username-localhost-8888=\"2|1:0|10:1546566364|23:username-localhost-8888|44:MDZlMDZjZDNmZDVjNGQ2NmIyMDJjMjM1NzRmY2FiOWM=|f559ad5d101435d9108af0b407c711fa62a1f2322fc2eb98323b621d25897f89\""
    }
[NotebookApp | ERROR] 500 POST /api/kernels/d8d48584-ec16-4ad9-8bbb-3ac2d02fef5d/restart (127.0.0.1) 110.95ms referer=http://localhost:8888/notebooks/LinearRegression.ipynb
[NotebookApp | WARNING] 404 DELETE /api/sessions/1643a27c-012a-4c20-a38e-d20a76d0b404 (127.0.0.1): Session not found: session_id='1643a27c-012a-4c20-a38e-d20a76d0b404'
[NotebookApp | WARNING] Session not found: session_id='1643a27c-012a-4c20-a38e-d20a76d0b404'
[NotebookApp | WARNING] 404 DELETE /api/sessions/1643a27c-012a-4c20-a38e-d20a76d0b404 (127.0.0.1) 8.74ms referer=http://localhost:8888/notebooks/LinearRegression.ipynb
[NotebookApp | INFO] Kernel started: dab6d382-0665-42d6-81e2-9a3ba1f611ae
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel dab6d382-0665-42d6-81e2-9a3ba1f611ae
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Saving file at /LinearRegression.ipynb
[NotebookApp | INFO] Creating new notebook in 
[NotebookApp | INFO] Starting buffering for dab6d382-0665-42d6-81e2-9a3ba1f611ae:93f0488fd20b443288ffb9bc95c47653
[NotebookApp | INFO] Kernel started: 7d174a70-7983-4816-905e-ed06f0c9cf5c
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 7d174a70-7983-4816-905e-ed06f0c9cf5c
[NotebookApp | INFO] Saving file at /Untitled.ipynb
[NotebookApp | INFO] Starting buffering for 7d174a70-7983-4816-905e-ed06f0c9cf5c:80a663da61214aefb0a3f0f4a425062b
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 2 kernels
[NotebookApp | INFO] Kernel shutdown: dab6d382-0665-42d6-81e2-9a3ba1f611ae
[NotebookApp | INFO] Kernel shutdown: 7d174a70-7983-4816-905e-ed06f0c9cf5c
